--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
 	"dependencies": {
+		"caporal": "^1.3.0",
+		"debug": "^4.1.1",
+		"fs-extra": "^8.1.0",
+		"got": "^9.6.0",
+		"js-beautify": "^1.10.2",
 		"puppeteer": "^1.19.0"
 	},
 	"name": "reddit-dataminer",
