--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 		"fs-extra": "^8.1.0",
 		"got": "^9.6.0",
 		"js-beautify": "^1.10.2",
-		"puppeteer": "^1.19.0"
+		"puppeteer": "^1.19.0",
+		"string-format": "^2.0.0"
 	},
 	"name": "reddit-dataminer",
 	"description": "Dumps Reddit scripts.",
