--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
 	"dependencies": {
 		"caporal": "^1.3.0",
 		"debug": "^4.1.1",
+		"form-data": "^3.0.0",
 		"fs-extra": "^8.1.0",
-		"got": "^9.6.0",
+		"got": "^10.0.0-alpha.3.2",
 		"js-beautify": "^1.10.3",
 		"puppeteer": "^2.0.0",
+		"snoowrap": "^1.20.1",
 		"string-format": "^2.0.0"
 	},
 	"name": "reddit-dataminer",
