--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
 	"dependencies": {
 		"caporal": "^1.3.0",
 		"debug": "^4.1.1",
+		"esprima": "^4.0.1",
 		"form-data": "^3.0.0",
 		"fs-extra": "^8.1.0",
 		"got": "^10.0.0-alpha.3.2",
 		"js-beautify": "^1.10.3",
-		"puppeteer": "^2.0.0",
+		"puppeteer": "^2.1.1",
 		"snoowrap": "^1.20.1",
 		"string-format": "^2.0.0"
 	},
