--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"dependencies": {
-		"caporal": "^1.3.0",
 		"debug": "^4.1.1",
+		"@caporal/core": "^2.0.2",
 		"esprima": "^4.0.1",
 		"form-data": "^3.0.0",
 		"fs-extra": "^8.1.0",
