Convert application to TypeScript

--- a/package.json
+++ b/package.json
@@ -14,8 +14,18 @@
 	"name": "reddit-dataminer",
 	"description": "Dumps Reddit scripts.",
 	"version": "1.0.0",
-	"main": "./src/index.js",
+	"main": "./dist/index.js",
 	"devDependencies": {
+		"@types/debug": "^4.1.5",
+		"@types/esprima": "^4.0.2",
+		"@types/estree": "^0.0.46",
+		"@types/fs-extra": "^9.0.8",
+		"@types/js-beautify": "^1.13.1",
+		"@types/node": "^13.9.3",
+		"@types/puppeteer": "^5.4.3",
+		"@types/string-format": "^2.0.0",
+		"@typescript-eslint/eslint-plugin": "^4.18.0",
+		"@typescript-eslint/parser": "^4.18.0",
 		"eslint": "^7.21.0",
 		"eslint-config-haykam": "^1.10.0",
 		"eslint-plugin-extra-rules": "^0.0.0-development",
@@ -24,14 +34,35 @@
 		"eslint-plugin-json": "^2.1.2",
 		"eslint-plugin-markdown": "^2.0.0",
 		"eslint-plugin-node": "^11.1.0",
-		"eslint-plugin-unicorn": "^28.0.2"
+		"eslint-plugin-unicorn": "^28.0.2",
+		"ts-node-dev": "^1.1.6",
+		"typescript": "^4.2.3"
 	},
 	"scripts": {
+		"build": "tsc",
+		"start": "node ./dist/index.js",
+		"dev": "ts-node-dev --respawn ./src/index.ts",
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"lint": "eslint \"./**/*.js\" --ignore-path .gitignore"
+		"lint": "eslint \"./**/*.ts\" --ignore-path .gitignore"
 	},
 	"eslintConfig": {
-		"extends": "eslint-config-haykam"
+		"extends": [
+			"eslint-config-haykam",
+			"plugin:@typescript-eslint/eslint-recommended",
+			"plugin:@typescript-eslint/recommended"
+		],
+		"parser": "@typescript-eslint/parser",
+		"plugins": [
+			"@typescript-eslint"
+		],
+		"rules": {
+			"semi": "off",
+			"@typescript-eslint/semi": "error",
+			"no-shadow": "off",
+			"@typescript-eslint/no-shadow": "error",
+			"sort-imports": "error",
+			"jsdoc/require-param-type": "off"
+		}
 	},
 	"keywords": [
 		"reddit",
