--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
 	"dependencies": {
 		"debug": "^4.1.1",
 		"@caporal/core": "^2.0.2",
+		"acorn": "^8.11.3",
 		"esprima": "^4.0.1",
+		"estree-util-to-js": "^2.0.0",
 		"form-data": "^3.0.0",
 		"fs-extra": "^8.1.0",
 		"got": "^10.0.0-alpha.3.2",
+		"is-path-inside": "^3.0.3",
 		"js-beautify": "^1.10.3",
 		"puppeteer": "^2.1.1",
 		"snoowrap": "^1.20.1",
