--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 		"debug": "^4.1.1",
 		"@caporal/core": "^2.0.2",
 		"acorn": "^8.11.3",
+		"acorn-walk": "^8.3.2",
 		"esprima": "^4.0.1",
 		"estree-util-to-js": "^2.0.0",
 		"form-data": "^3.0.0",
@@ -12,6 +13,7 @@
 		"js-beautify": "^1.10.3",
 		"puppeteer": "^2.1.1",
 		"snoowrap": "^1.20.1",
+		"source-map": "^0.7.4",
 		"string-format": "^2.0.0"
 	},
 	"name": "reddit-dataminer",
