--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"@types/debug": "^4.1.5",
 		"@types/esprima": "^4.0.2",
 		"@types/estree": "^0.0.46",
+		"@types/estree-jsx": "^1.0.5",
 		"@types/fs-extra": "^9.0.8",
 		"@types/js-beautify": "^1.13.1",
 		"@types/node": "^18.14.6",
